<?xml version="1.0"?>
<package format="2">
  <name>caster_base</name>
  <version>1.1.0</version>
  <description>The caster_base package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/caster</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/caster</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/caster/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>ros-controllers</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>diff_drive_controller</depend>
  <depend>yocs_cmd_vel_mux</depend>
  <depend>socket_bridge</depend>

  <depend>rplidar_ros</depend>
  <depend>dauxi_ks106</depend>
  <depend>hongfu_bms</depend>
  <depend>jy901_driver</depend>

  <depend>caster_control</depend>
  <depend>caster_description</depend>

  <export>
  </export>
</package>
