<?xml version="1.0"?>
<package format="2">
  <name>caster_navigation</name>
  <version>1.1.0</version>
  <description>The caster_navigation package</description>

  <maintainer email="ye@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/caster</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/caster</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/caster/issues</url>

  <author email="ye@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>move_base</depend>
  <depend>dwa_local_planner</depend>
  <depend>base_local_planner</depend>
  <depend>navfn</depend>
  <depend>map_server</depend>

  <depend>caster_base</depend>

  <export>
  </export>
</package>
